<!--
  ~ Copyright 2019 Punch Through Design LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">BLE Starter</string>
    <string name="ble_playground">BLE Playground</string>
    <string name="temperature">Temperature:</string>
    <string name="soil_moisture">Soil Moisture:</string>
    <string name="air_quality">Air Quality:</string>
    <string name="humidity">Humidity:</string>
    <string name="brightness">Brightness:</string>
</resources>
