<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Punch Through Design LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".BleOperationsActivity">

    <LinearLayout
        android:id="@+id/layMain"
        android:layout_width="409dp"
        android:layout_height="658dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characteristics_title">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:rowCount="3"
            app:columnCount="2"
            app:alignmentMode="alignMargins"
            android:layout_gravity="center_horizontal"
            app:columnOrderPreserved="false">

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/thermometer"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:id="@+id/textTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:text="@string/temperature"
                        android:textSize="16dp"
                        android:textAlignment="center"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/plant"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:id="@+id/textSoil"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:text="@string/soil_moisture"
                        android:textSize="16dp"
                        android:textAlignment="center"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                android:layout_margin="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/wind"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:id="@+id/textAriQu"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:text="@string/air_quality"
                        android:textSize="16dp"
                        android:textAlignment="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                android:layout_margin="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/idea"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:id="@+id/textBrightness"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:text="@string/brightness"
                        android:textSize="16dp"
                        android:textAlignment="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                android:layout_margin="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/humidity"
                        android:layout_marginBottom="10dp"/>

                    <TextView
                        android:id="@+id/textHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:text="@string/humidity"
                        android:textSize="16dp"
                        android:textAlignment="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/cardview_light_background"
                android:layout_margin="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <Button
                        android:id="@+id/tbutton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Change Mode"
                        android:background="@color/cardview_light_background"
                        android:textSize="16dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.gridlayout.widget.GridLayout>

    </LinearLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#99CC67"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />

    <TextView
        android:id="@+id/characteristics_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Druid Plant"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

